config("executable_config") {
  include_dirs = [ "//" ]

  if (host_os == "linux") {
    ldflags = [
      # ld.so understands the string $ORIGIN (or equivalently ${ORIGIN}) in an rpath
      # specification (DT_RPATH or DT_RUNPATH) to mean the directory containing the
      # application executable.
      #"-Wl,-rpath-link=\$ORIGIN",
      "-Wl,-rpath=\$ORIGIN",
    ]
  }
}

config("shared_library_config") {
  include_dirs = [ "//" ]

  cflags = [ "-fPIC" ]
}

config("static_libaray_config") {
  include_dirs = [ "//" ]
}

config("tests_config") {
  cflags = [
    "-fpermissive",

    # full access
    "-fno-access-control",

    # coverage
    "-fprofile-arcs",
    "-ftest-coverage",
  ]

  #coverage
  ldflags = [ "--coverage" ]

  libs = [
    "gtest",
    "gtest_main",

    # "gmock",
    # "gmock_main",
  ]
}

# executable("main") {
#   sources = [ "pillar/main.cc" ]
# }

# targets

shared_library("pillar") {
  deps = [ "//pillar:pillar_sources" ]
}
shared_library("tests") {
  deps = [ "//tests:tests_sources" ]
}

executable("closure_tests") {
  include_dirs = [ "//" ]

  sources = [ "//tests/base/closure_tests.cc" ]

  libs = [
    "gtest",
    "gtest_main",
  ]
}

executable("functor_traits_tests") {
  include_dirs = [ "//" ]

  sources = [ "//tests/thread/functor_traits_tests.cc" ]

  libs = [
    "gtest",
    "gtest_main",
  ]
}
