config("compiler_config") {
  defines = []
  cflags = []
  cflags_c = []
  cflags_cc = []
  ldflags = []

  # language version
  if (std_c != "") {
    cflags_c += [ "-std=${std_c}" ]
  }
  if (std_cxx != "") {
    cflags_cc += [ "-std=${std_cxx}" ]
  }

  # build type
  if (build_type == "debug") {
    cflags += [
      "-g",
      "-O0",
      "-Wall",
      "-Wextra",
    ]
    defines += [ "DEBUG" ]
  } else if (build_type == "release") {
    cflags += [
      "-O3",
      "-Wall",
      "-Wextra",
      "-Werror",
    ]
    defines += [ "NDEBUG" ]
  }
}
